--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
             <button id="pw"><b>Reset</button>
         </div>
     </section>
+    <footer>Made With &hearts; By Aditya
+        <br/>
+        © copyright @ Aditya Narayan Mishra
+
+    </footer>
     <!-- <div id="players">
         <button class="players">Virat Kholi</button>
         <button class="players"></button>
